--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.driver=org.mariadb.jdbc.Driver
-jdbc.url=jdbc:mariadb://18.163.127.10:3306/mybatis
-jdbc.username=root
-jdbc.password=mysql@982709437
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/email_system
+jdbc.username=user
+jdbc.password=qq@982709437
