udpate sql schema

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
     </dependencies>
 
     <build>
+        <finalName>huiyuan</finalName>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
