--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,22 +1,24 @@
 ### set log levels ###
 log4j.rootLogger = DEBUG,console,file
 
-### 输出到控制台 ###
+### console output ###
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target = System.out
 log4j.appender.console.Threshold = DEBUG
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%c]-%m%n
+log4j.appender.console.Encoding=UTF-8
 
-### 输出到日志文件 ###
+### file output ###
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=./log/email.log
 log4j.appender.file.MaxFileSize=10mb 
 log4j.appender.file.Threshold=DEBUG 
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%p][%d{yy-MM-dd}][%c]%m%n
+log4j.appender.file.Encoding=UTF-8
 
-# 日志输出级别
+# log level
 log4j.logger.org.mybatis=DEBUG
 log4j.logger.java.sql=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
