--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,6 +8,8 @@ log4j.appender.console.Threshold = DEBUG
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%c]-%m%n
 log4j.appender.console.Encoding=UTF-8
+log4j.appender.syslog.Encoding=UTF-8
+log4j.appender.A1.Encoding=UTF-8
 
 ### file output ###
 log4j.appender.file=org.apache.log4j.RollingFileAppender
